objects/Affiliate_Update_for_Approval__c.object
<CustomObject>
    <label>Affiliate Update for Approval</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Affiliate Updates for Approval Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Affiliate Updates for Approval</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
                <value>
                    <fullName>Remove</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Needs Review</fullName>
                    <color>#FFCC66</color>
                    <default>true</default>
                    <label>Needs Review</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <color>#33FF33</color>
                    <label>Approved</label>
                </value>
                <value>
                    <fullName>Denied</fullName>
                    <color>#BBBBBB</color>
                    <label>Denied</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Affiliate</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliate Updates for Approval</relationshipLabel>
        <relationshipName>Affiliate_Updates_for_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Affiliate Updates for Approval</relationshipLabel>
        <relationshipName>Affiliate_Updates_for_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stories__c</fullName>
        <label>Stories</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exposure__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exposure</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location</referenceTo>
        <relationshipLabel>Affiliate Updates for Approval</relationshipLabel>
        <relationshipName>Affiliate_Updates_for_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ancillary__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ancillary</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliate Updates for Approval (Ancillary)</relationshipLabel>
        <relationshipName>Affiliate_Updates_for_Approval1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salutation__c</fullName>
        <label>Salutation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Ms.</fullName>
                </value>
                <value>
                    <fullName>Mx.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Year_Built__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renovations__c</fullName>
        <label>Renovations or Construction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Occupancy_ms__c</fullName>
        <label>Occupancy</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate Headquarters</fullName>
                </value>
                <value>
                    <fullName>Education Center</fullName>
                </value>
                <value>
                    <fullName>Express Center</fullName>
                </value>
                <value>
                    <fullName>Facility Under Construction</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Medical Center</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Parking Lot</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>School-Based Health Center</fullName>
                </value>
                <value>
                    <fullName>Secondary Administrative Office</fullName>
                </value>
                <value>
                    <fullName>Unoccupied</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owned_Leased__c</fullName>
        <label>Owned/Leased</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owned</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitted By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Affiliate_Updates_for_Approval1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Update_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Update Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exterior_Work__c</fullName>
        <label>Exterior Work</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Facility_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Facility Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility_Type__c</fullName>
        <label>Facility Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliate Headquarters</fullName>
                </value>
                <value>
                    <fullName>Education Center</fullName>
                </value>
                <value>
                    <fullName>Express Center</fullName>
                </value>
                <value>
                    <fullName>Facility Under Construction</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Medical Center</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Parking Lot</fullName>
                </value>
                <value>
                    <fullName>Pharmacy</fullName>
                </value>
                <value>
                    <fullName>School-Based Health Center</fullName>
                </value>
                <value>
                    <fullName>Secondary Administrative Office</fullName>
                </value>
                <value>
                    <fullName>Unoccupied</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Ancillary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interior_Work__c</fullName>
        <label>Interior Renovation Only</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_Property__c</fullName>
        <label>Real Property</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Central_Alarm1__c</fullName>
        <label>Central Alarm</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Stage__c</fullName>
        <formula>IF(
ISPICKVAL( Stage__c ,&quot;Needs Review&quot;),&quot;Pending Review&quot;,IF(
ISPICKVAL( Stage__c ,&quot;Approved&quot;),&quot;Approved&quot;,&quot;Rejected&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Quarter__c</fullName>
        <formula>TEXT(YEAR(DATEVALUE(CreatedDate))) &amp;



(if( MONTH(DATEVALUE(CreatedDate)) &lt;4,&quot;Q1&quot;,

if( MONTH(DATEVALUE(CreatedDate)) &lt;7,&quot;Q2&quot;,

if( MONTH(DATEVALUE(CreatedDate)) &lt;10,&quot;Q3&quot;,

&quot;Q4&quot;

))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Square_Footage__c</fullName>
        <label>Square Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory_Value__c</fullName>
        <label>Inventory Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubmittedByName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>[submitted by] Submitted By Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Affiliate_Updates_for_Approval</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Affiliate_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Affiliate Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seismic_Upgrades__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Seismic Upgrades</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Construction_Cost__c</fullName>
        <label>Construction Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_Type__c</fullName>
        <label>Construction Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(1) Fire Resistive/Heavy NC</fullName>
                </value>
                <value>
                    <fullName>(2) Steel Deck &amp; Other Light NC</fullName>
                </value>
                <value>
                    <fullName>(3) Heavy Timber</fullName>
                </value>
                <value>
                    <fullName>(4) Masonry Joist</fullName>
                </value>
                <value>
                    <fullName>(5) Frame</fullName>
                </value>
                <value>
                    <fullName>(6) Other</fullName>
                </value>
                <value>
                    <fullName>(8) Boards on Joist</fullName>
                </value>
                <value>
                    <fullName>(9) Brick</fullName>
                </value>
                <value>
                    <fullName>(10) Wood Frame</fullName>
                </value>
                <value>
                    <fullName>(11) Masonry Non-Combustible</fullName>
                </value>
                <value>
                    <fullName>(12) Concrete</fullName>
                </value>
                <value>
                    <fullName>(13) Cinder Block</fullName>
                </value>
                <value>
                    <fullName>(14) Steel Deck (combustible)</fullName>
                </value>
                <value>
                    <fullName>(15) Wood Truss on Steel</fullName>
                </value>
                <value>
                    <fullName>(17) Plywood on Lam. Beams</fullName>
                </value>
                <value>
                    <fullName>(18) Protected Steel</fullName>
                </value>
                <value>
                    <fullName>(20) Plywood on Glue Lam./Wood Frame</fullName>
                </value>
                <value>
                    <fullName>(22) Plywood on Lam. Beams/Tilt-Up Concrete</fullName>
                </value>
                <value>
                    <fullName>(23) Un-improved land</fullName>
                </value>
                <value>
                    <fullName>(24) Non-combustible</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Personal_Property__c</fullName>
        <label>Personal Property</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Construction Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Employee_Headcount__c</fullName>
        <label>Employee Headcount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retro_fitting_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Retro-fitting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Under_Construction__c</fullName>
        <label>Under Construction?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Real_Property_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Real Property Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Building_Improvement__c</fullName>
        <label>Building Improvement</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sprinkler_Percentage__c</fullName>
        <label>Sprinkler Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Sprinkler_Protected1__c</fullName>
        <label>Sprinkler Protected</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Interruption__c</fullName>
        <label>Business Interruption</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Construction_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Construction End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Changed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact Email Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inventory_Value_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Inventory Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Additional Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ground_Up_Construction__c</fullName>
        <label>Ground Up Construction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Construction_Start_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Construction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Personal_Property_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Personal Property Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Plumbing_or_Piping_Work__c</fullName>
        <label>Plumbing or Piping Work</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Excavation_or_Subsurface__c</fullName>
        <label>Excavation or Subsurface</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Reviewed_by_ARMS__c</fullName>
        <label>Contract Reviewed by ARMS</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Building_Improvement_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Building Improvement Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Interruption_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Business Interruption Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hot_Work_During_Construction__c</fullName>
        <label>Hot Work During Construction</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Builders_Risk_Coverage_Needed__c</fullName>
        <label>Builders Risk Coverage Needed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Construction_Security_Measures__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Construction Security Measures</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Construction_Project_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Construction Project Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Water_Fire_Sys_Imp_During_Constr__c</fullName>
        <label>Water/Fire Sys Imp During Constr</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owned_Ancillary_Operated_Affiliate__c</fullName>
        <label>Owned Ancillary/ Operated Affiliate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constr_Cert_of_Liability_Ins_Obtained__c</fullName>
        <label>Constr Cert of Liability Ins Obtained</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <label>Team</label>
    </recordTypes>
    <recordTypes>
        <fullName>Property</fullName>
        <active>true</active>
        <label>Property</label>
    </recordTypes>
</CustomObject>